# OPengine.Addon.SPIRV

./: CMakeLists.txt  README.md  addon.cmake  package.json
include/: OPspirv.h
source/: OPspirv.cpp
